# cmake-fortify-demo

./: CMakeLists.txt  LICENSE  README.md  sample.cpp
fortify/: ar.in  cc.in  configure_tools.cmake  cxx.in  toolchain.cmake.in
